--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-    <title>Jia Li, a programmer with passion</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jia Li!</h1>
-				<p>I'm a programmer with passion, currently contribute on angular/zone.js. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:JiaLi.Passion@gmail.com">email</a></li>
-        		<li><a href="https://github.com/JiaLiPassion">github.com/JiaLiPassion</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
-4
+---
+layout: default
+title: JiaLi Passion
+---
+<div class="blurb">
+	<h1>Hi there, I'm JiaLi Passion!</h1>
+	<p>I'm a programmer with passion, and contributing to angular/zone.js <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
